<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/button_roll"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="64dp"
        android:paddingVertical="16dp"
        android:text="@string/button_roll_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout_min"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        app:expandedHintEnabled="false"
        app:layout_constraintBottom_toBottomOf="@+id/textInputLayout_max"
        app:layout_constraintEnd_toStartOf="@+id/textInputLayout_max"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textInputLayout_max">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editText_min"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:hint="@string/editText_min_hint"
            android:inputType="number"
            android:text="@string/editText_min_defaultText"
            android:imeOptions="actionDone"
            android:selectAllOnFocus="true" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout_max"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        app:expandedHintEnabled="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/textInputLayout_min"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editText_max"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:hint="@string/editText_max_hint"
            android:inputType="number"
            android:text="@string/editText_max_defaultText"
            android:imeOptions="actionDone"
            android:selectAllOnFocus="true" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/textView_result"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginEnd="64dp"
        android:gravity="center"
        android:textAppearance="?attr/textAppearanceHeadline3"
        app:layout_constraintBottom_toTopOf="@+id/button_roll"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_setDefault" />

    <Button
        android:id="@+id/button_setDefault"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:paddingVertical="16dp"
        android:text="@string/button_setDefault_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout_min" />
</androidx.constraintlayout.widget.ConstraintLayout>